[tool.poetry]
name = "ynab-sdk"
version = "0.5.0"
description = ""
authors = ["André Roggeri Campos <a.roggeri.c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.28.2"
redis = "3.4.1"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# [tool.poetry.scripts]
kgb = "7.1.1"
black = "^23.3.0"
coverage = "^7.2.7"
nose2 = "0.12.0"
# pynab = "pynab.pynab:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
